fix(style): hopefully adhere input submit button styling on Safari iOS

--- a/style.css
+++ b/style.css
@@ -37,6 +37,20 @@ body {
   flex-direction: column;
 }
 
+/* 
+ * Input submit styling doesn't work
+ * in Safari iOS by default, this should fix it.
+ * Credit: https://stackoverflow.com/questions/1681826/css-safari-on-mac-doesnt-adhere-to-my-submit-button-style#17701452
+ * This question was asked 13 years ago and Apple 🍎
+ * hasn't fixed this yet, bruh 💀.
+*/
+
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 .interactive-rating-component {
   margin: auto;
 }
